@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
         <groupId>org.broadleafcommerce</groupId>
         <artifactId>broadleaf-boot-starter-parent</artifactId>
         <version>6.2.10-GA</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -30,17 +30,35 @@
     </repositories>
 
     <properties>
-        <debug.args>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=${debug.port}</debug.args>
-        <boot.jvm.memory>-Xmx1536M</boot.jvm.memory>
-        <boot.jvm.args>${boot.jvm.memory} ${debug.args}</boot.jvm.args>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.uri>${project.baseUri}</project.uri>
+        <java.version>1.8</java.version>
+        <boot.jvm.memory>-Xmx1536M</boot.jvm.memory>
+        <debug.port>5007</debug.port>
+        <debug.args>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=${debug.port}</debug.args>
+        <boot.jvm.args>${boot.jvm.memory} ${debug.args}</boot.jvm.args>
     </properties>
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
@@ -48,6 +66,7 @@
                         <jvmArguments>${boot.jvm.args}</jvmArguments>
                     </configuration>
                 </plugin>
+            
             </plugins>
         </pluginManagement>
         <plugins>
@@ -68,14 +87,14 @@
         </plugins>
     </build>
 
-    <profiles>
+    <!--<profiles>
         <profile>
             <id>jrebel</id>
             <properties>
                 <boot.jvm.args>${boot.jvm.memory} ${debug.args} ${jrebel.agent.args}</boot.jvm.args>
             </properties>
         </profile>
-    </profiles>
+    </profiles>-->
 
     <dependencyManagement>
         <dependencies>
@@ -89,8 +108,6 @@
 
     <modules>
         <module>core</module>
-        <module>site</module>
-        <module>admin</module>
         <module>api</module>
     </modules>
 </project>
